# trading-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPROVEMENT_TODO.md  LGBM_PROB_PLAN.md  LGBM_PROB_RESEARCH.md  ML_PERF_PLAN.md  ML_PERF_RESEARCH.md  ML_PLAN.md  ML_RESEARCH.md  PERFORMANCE_PLAN.md  PERFORMANCE_RESEARCH.md  PERF_PLAN.md  PERF_RESEARCH.md  PLAN.md  PROGRESSBAR_PLAN.md  PROGRESSBAR_RESEARCH.md  README.md  REFACTOR_PLAN.md  REFACTOR_RESEARCH.md  SCAN_RESULT.md  SEQUENCE.md  STRATEGY_SELECTION.md  TROUBLE_SHOOTING.md  VERIFY_PLAN.md  VERIFY_RESEARCH.md  docker-compose.yml  pyproject.toml
config/: backtest.yaml  default.yaml
scripts/: CLAUDE.md  anti-patterns.md  healthcheck.py  inspect_eth_calibrator.py  run_phase6.sh
scripts/git-hooks/: pre-push
src/tradingbot/: CLAUDE.md  __init__.py  anti-patterns.md  cli.py  config.py
src/tradingbot/backtest/: engine.py  holdout.py  optimizer.py  parallel.py  report.py  simulator.py  vectorized.py  walk_forward.py
src/tradingbot/core/: enums.py  events.py  models.py
src/tradingbot/data/: fetcher.py  (+3 more)
state/: paper-doge-4h.json  paper-sol-1h.json
tests/: CLAUDE.md  anti-patterns.md  conftest.py  test_backtest_engine.py  test_cli_helpers.py  test_combine.py  test_diagnostics.py  test_indicators.py  test_live_engine.py  test_live_trading.py  test_ml.py  test_models.py  test_multi_symbol.py  test_optimizer.py  test_paper_exchange.py  test_parallel_workers.py  test_risk_manager.py  test_storage.py  test_strategies.py  test_threshold_tuner.py  test_tuner.py  test_vectorized.py  test_ws_client.py
(+43 files in other folders)
