[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Algorithmic trading bot for Upbit with backtesting framework"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "ta>=0.11",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "pyarrow>=14.0",
    "structlog>=23.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]
research = [
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "plotly>=5.0",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.0",
]
ml = [
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "optuna>=3.5.0",
    "shap>=0.45.0",
]

[project.scripts]
tradingbot = "tradingbot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingbot"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
